// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SimpleCard /> by default matches with snapshot 1`] = `
<div
  className="k-Card k-Card--withoutBoxShadowOnHover simple-card__ContainerStyle-sc-1g5bppt-0 ixVVov"
  title={null}
>
  <div
    className="k-Card__imageContainer marger__StyledMarger-q3lecu-0 jgfcQX"
  >
    <div
      className="simple-card__PlayerStyle-sc-1g5bppt-3 behilo"
    >
      <img
        alt=""
        className="k-Card__image simple-card__ImageStyle-sc-1g5bppt-1 dIFdHh"
        src="https://placehold.it/200x200/caf4fe/caf4fe"
      />
    </div>
  </div>
  <div
    className="marger__StyledMarger-q3lecu-0 cHJBWz"
  >
    <span
      className="k-HorizontalStroke k-HorizontalStroke--tiny"
    />
  </div>
</div>
`;

exports[`<SimpleCard /> with projectVideo props matches with snapshot 1`] = `
<div
  className="k-Card k-Card--withoutBoxShadowOnHover simple-card__ContainerStyle-sc-1g5bppt-0 ixVVov"
  title={null}
>
  <div
    className="k-Card__imageContainer marger__StyledMarger-q3lecu-0 jgfcQX"
  >
    <div
      className="simple-card__PlayerStyle-sc-1g5bppt-3 behilo"
    >
      <div
        className="simple-card__PlayerButtonStyle-sc-1g5bppt-2 kFiYmQ"
      >
        <span
          aria-label={null}
          className="k-u-color-background1 k-u-size-default k-u-weight-regular"
        >
          ►
        </span>
      </div>
      <img
        alt=""
        className="k-Card__image simple-card__ImageStyle-sc-1g5bppt-1 dIFdHh"
        src="https://placehold.it/200x200/caf4fe/caf4fe"
      />
    </div>
  </div>
  <div
    className="marger__StyledMarger-q3lecu-0 cHJBWz"
  >
    <span
      className="k-HorizontalStroke k-HorizontalStroke--tiny"
    />
  </div>
</div>
`;

exports[`<SimpleCard /> without horizontalStroke prop matches snapshot 1`] = `
<div
  className="k-Card k-Card--withoutBoxShadowOnHover simple-card__ContainerStyle-sc-1g5bppt-0 ixVVov"
  title={null}
>
  <div
    className="k-Card__imageContainer marger__StyledMarger-q3lecu-0 jgfcQX"
  >
    <div
      className="simple-card__PlayerStyle-sc-1g5bppt-3 behilo"
    >
      <img
        alt=""
        className="k-Card__image simple-card__ImageStyle-sc-1g5bppt-1 dIFdHh"
        src="https://placehold.it/200x200/caf4fe/caf4fe"
      />
    </div>
  </div>
</div>
`;
